@@ -51,10 +51,6 @@ OAREXEC_DEBUG_MODE="0"
 # OAR log file
 LOG_FILE="/var/log/oar.log"
 
-# OAR Allowed networks
-# Networks or hosts allowed to submit jobs to OAR and compute nodes may be specified here
-ALLOWED_NETWORKS="127.0.0.1/32 0.0.0.0/0"
-
 # Specify where we are connected with a job of the deploy type
 DEPLOY_HOSTNAME="127.0.0.1"
 
